monticore-generator/src/test/resources/cocos/valid/ConservativeExtensionSup.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.valid;

grammar ConservativeExtensionSup extends cocos.valid.ConservativeExtensionSuper {

    A extends M = Name P? ;

    P = "-"? "some" M* ;

    C extends O = P* Name P? ;

    D extends R = Name n:Name;

    Q = M? "optional" ;

    F extends N = x:M? "one" M;

}