monticore-generator/src/test/resources/cocos/invalid/A4047/A4047c.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4047;

grammar A4047c {
  
  interface A = E;
  
  interface B extends A;
  
  interface C extends B = F;
  
  D implements C = F;
  
  E;
  
  F;
}
